--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,29 @@
+body {
+    position: relative;
+    z-index: 0;
+}
+
+body::before {
+    content: "";
+    position:fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url("php-logo.png");
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+    opacity: 0.4;
+    z-index: -1;
+}
+
 p {
     font-size: 22px;
+}
+
+h2 {
+    font-size: 30px;
 }
 
 h3 {
